# too-good-to-be-true-backtester

./: .gitignore  Dockerfile  GLOSSARY.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
api/: README.md  __init__.py  main.py  registry.py  serialize.py  uploads.py
app/: AGENT_PROMPT.md  app.py  data_upload.py  strategy_template.py
examples/: batch_scorecard.py  phase0_smoke.py  run_scorecard.py
tests/: test_batch.py  test_cli.py  test_engine.py  test_metrics.py  test_validation.py
tgtbt/: __init__.py  __main__.py  batch.py  cli.py  costs.py  data.py  engine.py  loaders.py  metrics.py  registry.py
tgtbt/reporting/: __init__.py  plots.py  scorecard.py  style.py
tgtbt/strategies/: __init__.py  base.py  bollinger_breakout.py  buy_and_hold.py  dual_momentum.py  mean_reversion.py  trend.py
tgtbt/validation/: __init__.py  cpcv.py  deflated.py  gridutil.py  montecarlo.py  permutation.py  robustness.py  splits.py  walkforward.py
web/: .env.local.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: EquityChart.tsx
web/lib/: api.ts
